Complete, but unstyled, app
Functional app with test images and instructions, still needs to be
styled.

--- a/TestYourSoil/app/src/main/res/layout/activity_main.xml
+++ b/TestYourSoil/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -79,6 +80,7 @@
                 android:id="@+id/look_option_instructions"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
                 android:layout_weight="2"
                 android:text="@string/look_test_instructions"
                 android:visibility="gone" />
@@ -88,6 +90,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -103,6 +106,7 @@
                 android:id="@+id/feel_option_instructions"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
                 android:layout_weight="2"
                 android:text="@string/feel_test_instructions"
                 android:visibility="gone" />
@@ -112,6 +116,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -127,6 +132,7 @@
                 android:id="@+id/separate_option_instructions"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
                 android:layout_weight="2"
                 android:text="@string/separate_test_instructions"
                 android:visibility="gone" />
@@ -136,6 +142,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -151,6 +158,7 @@
                 android:id="@+id/dig_option_instructions"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
                 android:layout_weight="2"
                 android:text="@string/dig_test_instructions"
                 android:visibility="gone" />
@@ -160,6 +168,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -175,6 +184,7 @@
                 android:id="@+id/flood_option_instructions"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
                 android:layout_weight="2"
                 android:text="@string/flood_test_instructions"
                 android:visibility="gone" />
